ingress/path-based-routing/ingress.yaml
#http://localhost:8080/product/
#http://localhost:8080/user/
#http://localhost:8080/

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 80
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /      
        pathType: Prefix
        backend:
          service:
            name: home-service
            port:
              number: 80
